--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header h1 {
 }
 
 /*  */
+
 main {
     text-align: center;
     display: flex;
@@ -56,7 +57,7 @@ main {
     width: 350px;
     background-color: var(--black);
     border-radius: 15px;
-    box-shadow: 0px 50px 60px rgba(39, 38, 42, .2);
+    box-shadow: 0px 20px 60px rgba(39, 38, 42, .1);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -104,6 +105,10 @@ footer ul {
 }
 
 /*  */
+
+.panel-smuke .panel-main {
+    background: #ffffff;
+}
 
 .panel-snowplace .panel-main {
     background: #121518;
