--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ footer ul {
 }
 
 .panel-elva .panel-main {
-    background: linear-gradient(180deg, #192C44 0%, #08111D 100%);
+    background: #1E1E1E;
 }
 
 .panel-lighttools .panel-main {
